kuber/pod_overload.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: overload-test
  labels:
    creation_method: manual
    env: test
    app: overload
spec: 
  nodeSelector:
    nodeType: test
  containers:
  - image: artemchikus/overload:overload
    imagePullPolicy: Always
    name: overload
    ports: 
    - name: http
      containerPort: 8080
      protocol: TCP
    livenessProbe:
      httpGet: 
        path: /alive
        port: 8080
      initialDelaySeconds: 5
      periodSeconds: 10
