kuber/pod_testserver.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: testserver-test
  labels:
    creation_method: manual
    env: test
    app: testserver
spec: 
  nodeSelector:
    nodeType: test
  containers:
  - image: artemchikus/overload:testserver
    imagePullPolicy: Always
    name: testserver
    ports: 
    - name: http
      containerPort: 8000
      protocol: TCP
    livenessProbe:
      httpGet: 
        path: /alive
        port: 8000
      initialDelaySeconds: 5
      periodSeconds: 10
