kuber/test_pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: test-pod
spec:
  volumes:
  - name: test-pod-nfs-storage
    persistentVolumeClaim:
      claimName: pvc-test
  nodeSelector: 
    nodeType: test
  containers:
  - image: luksa/kubia
    imagePullPolicy: Always
    name: test-pod
    ports:
      - containerPort: 8080
        protocol: TCP
    volumeMounts: 
    - mountPath: /data
      name: test-pod-nfs-storage
