kuber/s_lb_testserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: testserver-lb
spec: 
  type: LoadBalancer
  sessionAffinity: ClientIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector: 
    app: testserver
    env: prod
