kuber/s_np_testserver.yaml
apiVersion: v1
kind: Service
metadata: 
  name: testserver-np
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
    nodePort: 30124
  selector: 
    app: testserver
    env: test
