kuber/ingress_monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: kube.example.com
    http:
      paths:
      - pathType: Prefix
        path: /prometheus(/|$)(.*)
        backend:
          service:
            name: prometheus-service 
            port: 
              number: 8080
      - pathType: Prefix
        path: /grafana(/|$)(.*)
        backend:
          service:
            name: grafana 
            port: 
              number: 3000
      - pathType: Prefix
        path: /alertmanager(/|$)(.*)
        backend:
          service:
            name: alertmanager
            port: 
              number: 9093
